@@ -1,0 +1,15 @@
+if MAINTAINER_MODE
+png_files := $(shell cd $(srcdir); echo *.png)
+Makefile.am: Makefile.am.in $(png_files)
+	cd $(srcdir); \
+	cp Makefile.am.in makam-temp; \
+	echo 'theme_pngs = $(png_files)' >> makam-temp; \
+	mv makam-temp Makefile.am
+endif
+
+EXTRA_DIST = $(theme_DATA) Makefile.am.in
+
+themedir = $(datadir)/themes/Pixmap/gtk
+
+theme_DATA = gtkrc $(theme_pngs)
+
